--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eblousov",
   "version": "0.1.0",
-  "homepage": "http://aylok1n.github.io/economic-test",
+  "homepage": "http://aylok1n.github.io/economic-test/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.0",
